Replace guava collections with standard Java mechanisms in tests
Now that we have {List,Map}.of and friends, we don't need to lean on guava for
its collections classes any more.